--- a/index.html
+++ b/index.html
@@ -1,15 +1,82 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mortar & Pestle Records Style Sheet</title>
+        <title>Mortar & Pestle Records Stylesheet</title>
         <link href='styles.css' rel='stylesheet' type='text/css'>
     </head>
     <body>
+        <h1>Mortar & Pestle Records Stylesheet</h1>
         <section>
-            
+            <h2>Colors</h2>
+            <div class='color' id='bright-gold'>
+                <h3>Bright Gold</h3>
+                <ul>
+                    <li>#cfa153</li>
+                    <li>rgb(207, 161, 83)</li>
+                    <li>hsl(38, 56%, 57%)</li>
+                    <li>cmyk(0%, 22%, 60%, 19%)</li>
+                </ul>
+            </div>
+            <div class='color' id='black-6c'>
+                <h3>Black 6c</h3>
+                <ul>
+                    <li>#231f20</li>
+                    <li>rgb(35, 31, 32)</li>
+                    <li>hsl(345, 6%, 13%)</li>
+                    <li>cmyk(0%, 11%, 9%, 86%)</li>
+                </ul>
+            </div>
+            <div class='color' id='bright-white'>
+                <h3>Bright White</h3>
+                <ul>
+                    <li>#ffffff</li>
+                    <li>rgb(255, 255, 255)</li>
+                    <li>hsl(0, 0%, 100%)</li>
+                    <li>cmyk(0%, 0%, 0%, 0%)</li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <h2>Fonts</h2>
+            <div class='font' id='florent-bold-type'>
+                 <h3>Florent Bold Type</h3>
+            </div>
+            <div class='font' id='florent-poster-two-outline'>
+                  <h3>Florent Poster Two Outline</h3>
+            </div>
+            <div class='font' id='open-sans'>
+                  <h3>Open Sans</h3>
+            </div>
+        </section>
+        <section>
+            <h2>Text Styles</h2>
+            <div class='text-style'>
+                <h1>H1: Main Page Heading</h1>'
+                <ul>
+                    <li>Font-weight:</li>
+                    <li>Font-size:</li>
+                    <li>Font-family:</li>
+                </ul>
+            </div>
+            <div class='text-style'>
+                <h2>H2: Subheading</h2>
+                <ul>
+                    <li>Font-weight:</li>
+                    <li>Font-size:</li>
+                    <li>Font-family:</li>
+                </ul>
+            </div>
+            <div class='text-style'>
+                <p>Paragraph Text</p>
+                <ul>
+                    <li>Font-weight:</li>
+                    <li>Font-size:</li>
+                    <li>Font-family:</li>
+                </ul>
+            </div>
         </section>
         <footer>
-
+            <p>This guide is designed by William Reginald Rhoda</p>
         </footer>
     </body>
 </html>
